<resources>
    <string name="app_name">Du_An_1</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="import_form">Import Form</string>
    <string name="export_form">Export Form</string>
    <string name="quantity">Quantity</string>
    <string name="productId">Product Id</string>
    <string name="productName">Product Name</string>
    <string name="productCode">Product Code</string>
    <string name="cateogory">Category</string>
    <string name="Date">Date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
